--- a/style.css
+++ b/style.css
@@ -685,6 +685,9 @@ iframe {
 	    display: flex;
 	    margin-bottom: 40px;
 	}
+	.btn {
+		padding: 16px 26px;
+	}
 }
 
 @media(max-width: 990px) {
@@ -871,6 +874,9 @@ iframe {
 	.gif-main .gif-btn {
 		margin: 0 -8px;
 	}
+	.btn {
+		padding: 16px 13px;
+	}
 }
 @media(max-width: 760px) {
 	.section-slied {
@@ -932,6 +938,11 @@ iframe {
 	.btn {
 		width: 100%;
 		text-align: center;
+		padding: 16px 30px;
+	}
+	.section-button-wrapper {
+		margin: 0 auto;
+		padding: 0 8px;
 	}
 }
 @media(max-width: 670px) {
@@ -961,7 +972,8 @@ iframe {
 	.gif-main .gif-title {
 		font-size: 36px;
   }
-  .gif-main .section-button {
+  .slick-initialized .slick-slide {
+		padding: 0;
   }
   .gif-main .gif-btn {
   	display: flex;
@@ -1024,6 +1036,19 @@ iframe {
 @media(min-width: 591px) {
 	.accordion .collapse {
 		display: flex;
+	}
+}
+@media(max-width: 520px) {
+	.colon-left .section-button-wrapper {
+		flex-direction: column;
+		align-items: center;
+		padding: 0;
+	}
+	.colon-left .section-button {
+		padding: 0;
+	}
+	.gif-main .btn {
+		padding: 16px 18px;
 	}
 }
 
